# instock_fastapi

./: .dockerignore  .env.backup  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QUICKFIX_M1_TUSHARE_TOKEN.md  README.md  alembic.ini  config.yaml  coverage.xml  docker-compose.ci.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.staging.release.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_mcp.py  test_metadata.py
.claude/: PHASE_0_COMPLETE_PLAN.md
alembic/: README  env.py
app/: build_info.py  config.py  database.py  exceptions.py  logging_config.py  main.py
config/: api_config.json  docker-ci.env  proxy.txt.bak  proxy.txt.example
core/: __init__.py  proxy_manager.py
docs/: DATA_LAYER_REPORT.md  EXECUTION_PLAN.md  M0_BASELINE_FREEZE_REPORT.md  M1_AGENT_TASK_REPORT_TEMPLATE.md  M1_EXECUTION_DASHBOARD.md  M1_INITIATION_TASKS.md  M1_KICKOFF_CHECKLIST.md  M1_LAUNCH_READINESS_CERTIFICATE.md  M1_LAUNCH_SEQUENCE.md  M1_PROGRESS_TRACKER.md  M1_READINESS_SUMMARY.md  M1_TASK_BREAKDOWN.md  M1_TASK_WS0-01_ALCHEMY.md  M1_TASK_WS0-02_TIME_COLUMNS.md  M1_TASK_WS0-03_TIMESCALE.md  M1_TASK_WS0-04_PRO_BAR.md  M1_TASK_WS0-05_QUALITY.md  M1_TASK_WS1-01_STOCK_SYNC.md  M1_TASK_WS1-02_BACKFILL_DAILY.md  M1_TASK_WS1-03_INDICATORS.md  M1_TASK_WS1-04_MINUTE_BARS.md  M1_TASK_WS1-05_FINANCIALS.md  M1_TASK_WS2-01_MONEYFLOW.md  M1_TASK_WS2-02_LIMIT.md  M1_TASK_WS2-03_LIMIT_DETAIL.md  M1_TASK_WS2-04_DISCLOSURE.md  M1_TASK_WS2-05_BAK_BASIC.md  M1_TASK_WS2-06_TOP_INST.md  M1_TASK_WS3-01_QUALITY_COMPLETENESS.md  M1_TASK_WS3-02_ALERTING.md  M1_TASK_WS3-03_MONITORING_ENHANCED.md  M1_TASK_WS3-04_LINEAGE.md  M1_TASK_WS3-05_DASHBOARD.md  M1_TASK_WS3-06_REPORT_AUTOMATION.md  M1_TUSHARE_TOKEN_BLOCK.md  PHASE3_P3-01_USER_EVENTS.md  PHASE3_P3-03_ALERT_ENGINE_IMPLEMENTATION.md  PHASE3_P3-04_STRATEGY_MARKET.md  PHASE3_P3-04_STRATEGY_MARKET_FRONTEND.md  PHASE3_P3-05_PARAM_OPTIMIZATION.md  (+12 more)
scripts/: backfill_2020_2025.py  backup_prod_db.sh  build_release_images.sh  check_april_baostock_completeness.py  check_m1_readiness.py  convert_to_hypertable.py  deploy_release.sh  docker_smoke.sh  fetch_all_stocks.py  fetch_lhb.py  full_backfill_tushare.py  init_timescaledb.py  m1_backfill_rehearsal.py  manual_mcp_probe.py  migrate_mysql_to_pg.py  migration_live_validation.py  start.sh  (+25 more)
(+354 files in other folders)
